# Steam-Sale

./: steam_sale_lift_guide.md
steam-sale-lift/: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
steam-sale-lift/.github/workflows/: ci.yml
steam-sale-lift/.streamlit/: config.toml
steam-sale-lift/dashboard/: app.py  streamlit_app.py
steam-sale-lift/data/samples/: universe_sample.json
steam-sale-lift/notebooks/: 01_eda.ipynb  02_hypothesis_1_did.ipynb  03_hypothesis_2_rdd.ipynb  04_hypothesis_3_synthetic_control.ipynb
steam-sale-lift/reports/: memo_1_revenue_lift.md  memo_2_review_scores.md  memo_3_genre_heterogeneity.md
steam-sale-lift/results/: eda_summary_stats.json  h1_did_results.json  h2_rdd_results.json  h3_sc_results.json
steam-sale-lift/scripts/: check_db_size.py  check_db_tables.py  check_outcomes.py  check_price_treatment.py  check_progress.py  check_progress2.py  check_review_coverage.py  check_review_dates.py  check_review_months.py  check_steamspy_totals.py  check_tc_parquet.py  check_treatment.py  create_notebooks.py  fix_rdd_notebook.py  fix_sc_notebook.py  rebuild_sc_notebook.py  run_sc_analysis.py  test_synthetic_reviews.py  truncate_reviews.py  update_notebook.py  update_notebook_treatment.py
steam-sale-lift/src/analysis/: cuped.py  did.py  eda.py  rdd.py  synthetic_control.py
steam-sale-lift/src/load/: ingest.py  schema.sql
steam-sale-lift/src/scrape/: prices_from_metadata.py  reviews_from_steamspy.py  steam_api.py  steamcharts.py  (+2 more)
steam-sale-lift/tests/: test_catalog.py  test_steam_client.py
(+8 files in other folders)
