[project]
name = "steam-sale-lift"
version = "0.1.0"
description = "Causal analysis of Steam seasonal sales on revenue, reviews, and player engagement"
requires-python = ">=3.11"
dependencies = [
    "httpx>=0.27.0",
    "tenacity>=8.3.0",
    "hishel>=0.0.30",
    "psycopg[binary]>=3.1.0",
    "pandas>=2.2.0",
    "numpy>=1.26.0",
    "statsmodels>=0.14.0",
    "linearmodels>=5.4",
    "scipy>=1.13.0",
    "dowhy>=0.11",
    "econml>=0.15.0",
    "pysyncon>=0.4.0",
    "beautifulsoup4>=4.12.0",
    "lxml>=5.2.0",
    "python-dotenv>=1.0.0",
    "tqdm>=4.66.0",
    "pyarrow>=16.0.0",
    "fastparquet>=2024.5.0",
    "streamlit>=1.36.0",
    "plotly>=5.22.0",
    "dbt-postgres>=1.8.0",
    "jupyter>=1.0.0",
    "ipykernel>=6.29.0",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.5.0",
    "pytest>=8.2.0",
    "pytest-httpx>=0.30.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--cov=src --cov-report=term-missing"
